fix: spacing landing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -120,7 +120,7 @@ MAIN SITE
 }
 
 .theme-toggle-container {
-  margin-left: 12px;
+  margin-left: 0;
 }
 
 .theme-toggle-container button {
